# Story_project

./: .env  .env.template  .gitignore  AUDIO_IMPROVEMENTS_SUMMARY.md  Dockerfile  FACES.md  LOGGING_AND_VIDEO_GUIDE.md  QTROBOT_TESTS_README.md  README.md  TESTS_README.md  analyze_logs.py  check_respeaker_service.sh  check_ros_topics.py  check_sennheiser_mic.sh  citations_list.md  cleanup_codebase.sh  configure_sennheiser_mic.sh  debug_speech_recognition.py  demo_voice_selection.py  diagnose_audio.py  docker-compose.yml  install_dependencies.sh  install_pyfeat_deps.sh  install_speech_recognition_deps.sh  live_vision_au.py  live_vision_au_save.py  main.py  make_all_executable.sh  make_au_scripts_executable.sh  make_direct_test_executable.sh  make_direct_tests_executable.sh  make_scripts_executable.sh  make_sennheiser_scripts_executable.sh  make_simple_pyfeat_executable.sh  make_vision_only_executable.sh  monitor_respeaker.py  reinstall_pyfeat.sh  requirements.txt  run_all_tests.py  run_all_tests_direct.py  (+23 more)
modules/: __init__.py
modules/llm_api/: __init__.py  llm_client.py
modules/logging/: __init__.py  session_logger.py  session_logger.py.bak
modules/mic_to_text/: __init__.py  speech_recognizer.py  whisper_recognizer.py
modules/text_to_speech/: __init__.py  emotionless_tts_engine.py  (+3 more)
notes/: README.md  note.txt
old_face_detection_for_confusion/: confusion_classifier_node.py  face_detector_node.py  feature_extractor_node.py
src/story_switch/: CMakeLists.txt  package.xml
src/story_switch/launch/: story_switch.launch
src/story_switch/src/: test_llm_client.py
src/story_switch/src/nodes/: speech_recog_node.py  speech_synth_node.py  story_manager_node.py  vision_track_node.py
src/story_switch/src/utils/: __init__.py  llm_client.py
video_analysis/: CLUSTER_SETUP_GUIDE.md  README.md  __init__.py  batch_processor.py  requirements.txt  run_analysis.py  test_system.py
(+250 files in other folders)
